RESOLVED FIXED304187
AX: Accessibility text stitching doesn't happen within links, causing unnecessary accessibility tree fragmentation
https://bugs.webkit.org/show_bug.cgi?id=304187
Summary AX: Accessibility text stitching doesn't happen within links, causing unneces...
Tyler Wilcock
Reported 2025-12-15 09:03:59 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-15 09:04:06 PST
Tyler Wilcock
Comment 2 2025-12-15 11:14:19 PST
EWS
Comment 3 2025-12-15 19:55:34 PST
Committed 304491@main (ddb1fba3b777): <https://commits.webkit.org/304491@main> Reviewed commits have been landed. Closing PR #55415 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.